# scs-volitional-search

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: build_neuron.sh  create_baseline.py  run_all.py  run_bohb.py  run_cmaes.py  run_grid_sweep.py  run_prelesion_reference.py  run_turbo.py  setup_external.sh  summarize_results.py
src/scs_search/: __init__.py  analysis.py  config.py  dose.py  metrics.py  patterns.py  plotting.py  simulator_adapter.py  sweeps.py  utils.py
src/scs_search/optimizers/: __init__.py  bohb_runner.py  cmaes_runner.py  turbo_runner.py
src/scs_search/reporting/: analysis.py  plotting.py  summarize.py
src/scs_search/search/: __init__.py  optimizer_cli.py  optimizer_history.py  sweep.py
src/scs_search/search/optimizers/: __init__.py  bohb.py  cmaes.py  turbo.py
src/scs_search/simulation/: backend.py  drive.py  evaluator.py  structural.py  transduction.py
src/scs_search/stimulation/: __init__.py  patterns.py
tests/: test_analysis.py  test_dose.py  test_metrics.py  test_optimizer_resume.py  test_optimizer_smoke.py  test_patterns.py  test_physical_modulation_search.py  test_plotting.py  test_simulator_adapter.py  test_supraspinal_drive.py  test_sweeps_smoke.py
